02-orquestacion/oequestacion-v/__solucion_deberes/ingress-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: web
  name: web
spec:
  rules:
  - host: lemoncoders.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
